fix scaling of datepicker on smaller screens

--- a/src/resources/postcss/views/_header.pcss
+++ b/src/resources/postcss/views/_header.pcss
@@ -26,14 +26,15 @@
 		}
 	}
 
-	.tribe-events-header__events-bar,
-	.tribe-events-header__top-bar {
-		flex: none;
-	}
-
 	.tribe-events-header__events-bar {
+		flex: none;
+
 		@media (--viewport-medium) {
 			width: 100%;
 		}
+	}
+
+	.tribe-events-header__top-bar {
+		flex: auto;
 	}
 }
